moved to java 21 moved to gradle 8.4 revisited multi-module structure