@@ -1,17 +1,12 @@
 import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 plugins {
+    id 'p3d.java-conventions'
     id 'application'
-    id 'org.springframework.boot' version '3.0.2' apply false
+    id 'org.springframework.boot' version "$spring_boot_version" apply false
+    id 'io.spring.dependency-management' version "$spring_dependencies_plugin_version"
+    id "io.freefair.lombok" version "$lombok_plugin_version"
     id 'org.liquibase.gradle' version '2.0.4'
-    id 'io.spring.dependency-management' version '1.1.0'
-}
-
-group = 'org.qw3rtrun.p3d'
-version = '0.0.1-SNAPSHOT'
-
-repositories {
-    mavenCentral()
 }
 
 dependencyManagement {
@@ -24,24 +19,12 @@ application {
     mainClass = 'org.qw3rtrun.p3d.printersmng.PrintersmngApplication'
 }
 
-compileJava {
-    options.compilerArgs += ['--enable-preview']
-}
-
-tasks.withType(JavaExec) { jvmArgs += '--enable-preview' }
-
 dependencies {
     implementation project(':core')
-
-    compileOnly 'org.projectlombok:lombok'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.h2database:h2'
     implementation 'org.liquibase:liquibase-core'
-    annotationProcessor 'org.projectlombok:lombok'
-
-    testCompileOnly 'org.projectlombok:lombok'
-    testAnnotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
